--- a/TFM_tex/biblio.bib
+++ b/TFM_tex/biblio.bib
@@ -1,3 +1,64 @@
+@article{distill,
+author = {Olah, Chris and Mordvintsev, Alexander and Schubert, Ludwig},
+year = {2017},
+month = {11},
+pages = {},
+title = {Feature Visualization},
+volume = {2},
+journal = {Distill},
+doi = {10.23915/distill.00007}
+}
+
+@inproceedings{tcav,
+  title={Interpretability Beyond Feature Attribution: Quantitative Testing with Concept Activation Vectors (TCAV)},
+  author={Been Kim and Martin Wattenberg and Justin Gilmer and Carrie J. Cai and James Wexler and Fernanda B. Vi{\'e}gas and Rory Sayres},
+  booktitle={International Conference on Machine Learning},
+  year={2017},
+  url={https://api.semanticscholar.org/CorpusID:51737170}
+}
+
+@article{NetDiss,
+  author       = {David Bau and
+                  Bolei Zhou and
+                  Aditya Khosla and
+                  Aude Oliva and
+                  Antonio Torralba},
+  title        = {Network Dissection: Quantifying Interpretability of Deep Visual Representations},
+  journal      = {CoRR},
+  volume       = {abs/1704.05796},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1704.05796},
+  eprinttype    = {arXiv},
+  eprint       = {1704.05796},
+  timestamp    = {Mon, 13 Aug 2018 16:47:06 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/BauZKOT17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{SE,
+  author={Hu, Jie and Shen, Li and Albanie, Samuel and Sun, Gang and Wu, Enhua},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Squeeze-and-Excitation Networks}, 
+  year={2020},
+  volume={42},
+  number={8},
+  pages={2011-2023},
+  keywords={Computer architecture;Computational modeling;Convolution;Task analysis;Correlation;Optimization;Convolutional neural networks;Squeeze-and-excitation;image representations;attention;convolutional neural networks},
+  doi={10.1109/TPAMI.2019.2913372}}
+
+
+@INPROCEEDINGS{mobilenet,
+  author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+  booktitle={2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition}, 
+  title={MobileNetV2: Inverted Residuals and Linear Bottlenecks}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={4510-4520},
+  keywords={Manifolds;Neural networks;Computer architecture;Standards;Computational modeling;Task analysis},
+  doi={10.1109/CVPR.2018.00474}
+ }
+
 @misc{LIMESURVEY,
       title={Which LIME should I trust? Concepts, Challenges, and Solutions}, 
       author={Patrick Knab and Sascha Marton and Udo Schlegel and Christian Bartelt},
